# cufsm-octave

./: .gitattributes  .gitignore  CITATION.cff  IMPROVEMENTS.md  LICENSE  README.md  TODO.md  cufsm-octave-example.m  cufsm-results.txt  cufsm_json.m  pyproject.toml
analysis/: stripmain.m
analysis/cFSM/: DOF_ordering.m  base_properties.m  meta_elems.m
analysis/plastic/: PMM_Plastic.m
cufsm_octave/: __init__.py  io.py  plotting.py  result.py  runner.py  templates.py
docs/: backend-code-map.md  compatibility-and-regression.md  development-roadmap.md  examples.md  getting-started.md  json-input-format.md  json-output-format.md  python-tooling.md  theory-and-cufsm-background.md  validation.md
examples/: lipped-channel-results.json  lipped-channel-results.txt  lipped-channel.json  postprocess_signature_curve.py  python_batch_lipped_channel.py  python_optimize_lipped_channel.py
helpers/: cufsm_json_run.m  cutwp_prop2.m
schema/: input-v1.schema.json
